# Solkitties

./: Anchor.toml  README.md  package.json
app/src/constants/: index.tsx
client/: index.ts  utils.ts
client/actions/: initialize.ts  updateState.ts
programs/solkitties/: Cargo.toml
programs/solkitties/src/: constant.rs  error.rs  lib.rs  state.rs  util.rs
tests/: solkitties.ts
